# sqsi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
sqsi/: __init__.py  queue_iterator.py
